--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack --config webpack.dev.js --watch",
     "build": "webpack --config webpack.prod.js",
     "server": "node server/index.js",
+    "server-dev": "nodemon server/index.js",
     "seed": "node server/db/seed.js",
     "test": "jest"
   },
