--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "cors": "^2.8.5",
     "date-fns": "^2.11.0",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.4",
+    "pg": "^8.0.0",
+    "pg-hstore": "^2.3.3",
     "react": "^16.8.6",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "sequelize": "^5.21.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
