--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mongoose": "^5.9.4",
+    "newrelic": "^6.5.0",
     "pg": "^8.0.0",
     "pg-hstore": "^2.3.3",
     "react": "^16.8.6",
